tests/ui/type-alias-impl-trait/unconstrained-impl-param.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-impl-param.rs:11:6
   |
LL | impl<'a> Trait for Opaque<&'a str> {
   |      ^^ unconstrained lifetime parameter
   |
   = note: consider using lifetime parameter `'a` in the impl on `Opaque<&'a str>` or otherwise constrain `'a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
